--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,11 @@
   --font-mono: var(--font-geist-mono);
 }
 
+@theme {
+  --color-surface-500: #1f1f1f;
+  --color-on-surface: white;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
